# coregister

./: README.md  README.pypi.md  pyproject.toml
coregister/: cli.py  core.py
